examples/test/testpolicy11361.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11361
  namespace: namespace188
spec:
  podSelector:
    matchLabels:
      key47: value33
      key16: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value10
      podSelector:
        matchLabels:
          key36: value46
          key29: value2
